Added scanning button animation, detection of scannable controllers and scan start

--- a/hal-core/resource/resource/web/css/hal.css
+++ b/hal-core/resource/resource/web/css/hal.css
@@ -133,3 +133,16 @@ body {
 .c3-line {
     stroke-width: 2px;
 }
+
+
+.anim-spin {
+  animation: spin 2s infinite linear;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
