--- a/hal-core/resource/resource/web/plugin_config.tmpl
+++ b/hal-core/resource/resource/web/plugin_config.tmpl
@@ -2,7 +2,7 @@
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
-        <div class="panel-heading">Detected Plugins</div>
+        <div class="panel-heading">Plugin Administration</div>
         <div class="panel-body">
 
             <table class="table table-hover table-condensed">
@@ -24,7 +24,7 @@
 
                             <div class="btn-toolbar pull-right">
                                 <input class="toggle-switch" type="checkbox" name="enabled"
-                                       data-size="mini" data-on-color="danger"
+                                       data-size="mini"
                                        {{#.isEnabled()}}checked{{/.isEnabled()}} >
                             </div>
                         </form>
