--- a/hal-core/resource/resource/web/sensor_config.tmpl
+++ b/hal-core/resource/resource/web/sensor_config.tmpl
@@ -86,7 +86,7 @@
                     <td>
                         <div class="btn-toolbar pull-right">
                             <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#sensorModal"
-                                    data-action="create_local_sensor">
+                                    data-action="create_local_sensor"
                                     data-type="{{.getType()}}"
                                     {{#.getDeviceConfigurator().getConfiguration()}}
                                     data-{{.getName()}}="{{.getString()}}"
