Fixed zigbee on off events

--- a/hal-core/resource/resource/web/event_detail.tmpl
+++ b/hal-core/resource/resource/web/event_detail.tmpl
@@ -1,4 +1,4 @@
-<h1 class="page-header">Details for <a href="#">{{event.getName()}}</a></h1>
+<h1 class="page-header">Details for <a href="?id={{event.getId()}}">{{event.getName()}}</a></h1>
 
 <div class="col-md-5">
     <div class="panel panel-default drop-shadow">
