--- a/hal-core/resource/resource/web/sensor_detail.tmpl
+++ b/hal-core/resource/resource/web/sensor_detail.tmpl
@@ -1,4 +1,4 @@
-<h1 class="page-header">Details for <a href="#">{{sensor.getName()}}</a></h1>
+<h1 class="page-header">Details for <a href="?id={{sensor.getId()}}">{{sensor.getName()}}</a></h1>
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
