Removed some padding on trigger page

--- a/hal-core/resource/resource/web/trigger.tmpl
+++ b/hal-core/resource/resource/web/trigger.tmpl
@@ -24,8 +24,8 @@
                 </button>
             </div>
         </div>
-        <div class="panel-body {{^.isEnabled()}}disabled{{/.isEnabled()}}">
-            <table class="table table-condensed">
+        <div class="panel-body {{^.isEnabled()}}disabled{{/.isEnabled()}}" style="padding-bottom: 0px;">
+            <table class="table table-condensed" style="margin-bottom: 0px;">
                 <thead class="row">
                     <th class="col-md-5 text-center">
                         Triggers
