Added startup page

--- a/hal-core/resource/resource/web/main_index.tmpl
+++ b/hal-core/resource/resource/web/main_index.tmpl
@@ -32,7 +32,7 @@
         <div class="navbar-header">
             <!-- Title and Icon -->
             <a class="navbar-brand" href="/">
-                <span class="glyphicon glyphicon-record" style="color:red"></span>
+                <span class="glyphicon glyphicon-record" style="color: red; top: 15px;"></span>
                 <b>HAL</b>
             </a>
             <!-- Hamburger button for smaller screens -->
