--- a/hal-core/resource/resource/web/main_nav.tmpl
+++ b/hal-core/resource/resource/web/main_nav.tmpl
@@ -3,7 +3,7 @@
             <div class="navbar-header">
                 <!-- Title and Icon -->
                 <a class="navbar-brand" href="/">
-                    <span class="glyphicon glyphicon-record" style="color: red;"></span>
+                    <span class="glyphicon glyphicon-record" style="color: red; top: 2px;"></span>
                     <b>HAL</b>
                 </a>
                 <!-- Hamburger button for smaller screens -->
