--- a/hal-core/resource/resource/web/sensor_config.tmpl
+++ b/hal-core/resource/resource/web/sensor_config.tmpl
@@ -8,6 +8,7 @@
 
             <table class="table table-hover table-condensed">
                 <thead>
+                    <th>#</th>
                     <th>Name</th>
                     <th>Type</th>
                     <th>Public</th>
@@ -21,6 +22,7 @@
                 </thead>
                 {{#localSensors}}
                 <tr>
+                    <td>{{.getId()}}</td>
                     <td>{{.getName()}}</td>
                     <td>{{.getType()}}</td>
                     <td>{{.isSynced()}}</td>
