Updated some js libs and added license info

--- a/hal-core/resource/resource/web/event_overview.tmpl
+++ b/hal-core/resource/resource/web/event_overview.tmpl
@@ -26,7 +26,7 @@
 
                             <div class="btn-toolbar pull-right">
                                 <input class="toggle-switch" type="checkbox" name="enabled"
-                                       data-size="mini" data-on-color="danger"
+                                       data-on-color="danger"
                                        {{#.getDeviceData().getData()}}checked{{/.getDeviceData().getData()}} >
                             </div>
                         </form>
