--- a/hal-core/resource/resource/web/trigger.tmpl
+++ b/hal-core/resource/resource/web/trigger.tmpl
@@ -175,8 +175,7 @@
                     <div class="form-group">
                         <label class="control-label">Enabled:</label>
                         <div class="checkbox">
-                            <input class="toggle-switch" type="checkbox" name="enabled"
-                                   data-size="small" data-off-color="danger" >
+                            <input class="toggle-switch" type="checkbox" name="enabled">
                         </div>
                     </div>
                     <div class="form-group">
