--- a/hal-core/resource/resource/web/event_detail.tmpl
+++ b/hal-core/resource/resource/web/event_detail.tmpl
@@ -32,7 +32,7 @@
 
                             <div class="btn-toolbar pull-left">
                                 <input class="toggle-switch" type="checkbox" name="enabled"
-                                       data-size="mini" data-on-color="danger"
+                                       data-on-color="danger"
                                        {{#event.getDeviceData().getData()}}checked{{/event.getDeviceData().getData()}} >
                             </div>
                         </form>
