--- a/hal-core/resource/resource/web/main_index.tmpl
+++ b/hal-core/resource/resource/web/main_index.tmpl
@@ -21,7 +21,7 @@
     <script src="js/hal.js"></script>
 
     <!-- charts -->
-    <script src="js/d3.min.js"></script>
+    <script src="js/d3.js"></script>
     <script src="js/c3.js"></script>
 
 </head>
