Changed type to show configuration class

--- a/hal-core/resource/resource/web/event_detail.tmpl
+++ b/hal-core/resource/resource/web/event_detail.tmpl
@@ -17,7 +17,7 @@
                 </thead>
                 <tr>
                     <th class="text-right">Type:</th>
-                    <td>{{event.getDeviceData().getClass().getSimpleName()}}</td>
+                    <td>{{event.getDeviceConfig().getClass().getSimpleName()}}</td>
                 </tr>
                 <tr>
                     <th class="text-right">Owner:</th>
