--- a/hal-core/resource/resource/web/sensor_detail.tmpl
+++ b/hal-core/resource/resource/web/sensor_detail.tmpl
@@ -28,7 +28,7 @@
                     </thead>
                     <tr>
                         <th class="text-right">Type:</th>
-                        <td>{{sensor.getDeviceData().getClass().getSimpleName()}}</td>
+                        <td>{{sensor.getDeviceConfig().getClass().getSimpleName()}}</td>
                     </tr>
                     <tr>
                         <th class="text-right">Public:</th>
