--- a/plugins/hal-nvr/resource/resource/web/camera_detail.tmpl
+++ b/plugins/hal-nvr/resource/resource/web/camera_detail.tmpl
@@ -1,9 +1,19 @@
 <h1 class="page-header">Details for <a href="#">{{camera.getName()}}</a></h1>
 
+<style>
+    #view-main {
+        width: 100%;
+        height: 480px;
+    }
+</style>
+
 <div class="col-md-12">
-    <video width="100%" height="480" controls>
-        <source src="rtsp://admin:xxxx@192.168.10.223:554/H.264">
-        Your browser does not support the video tag.
+    <video id="view-main" width="100%" height="480" class="video-js vjs-fill" preload="auto" data-setup='{}' controls autoplay muted >
+        <source src="{{camera.getPlaylistRelativeUrl()}}">
+        <p class="vjs-no-js">
+            To view this video please enable JavaScript, and consider upgrading to a web browser that
+            <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video.</a>
+        </p>
     </video>
 </div>
 
@@ -24,7 +34,7 @@
                 </thead>
                 <tr>
                     <th class="text-right">Type:</th>
-                    <td>{{camera.getDeviceData().getClass().getSimpleName()}}</td>
+                    <td>{{camera.getDeviceConfig().getClass().getSimpleName()}}</td>
                 </tr>
                 <tr>
                     <th class="text-right">Owner:</th>
@@ -40,3 +50,7 @@
         </div>
     </div>
 </div>
+
+<link href="css/video-js.min.css" rel="stylesheet">
+<script src="js/video.min.js"></script>
+<script src="js/videojs-http-streaming.min.js"></script>
