--- a/hal-core/resource/resource/web/startup.tmpl
+++ b/hal-core/resource/resource/web/startup.tmpl
@@ -5,8 +5,8 @@
     <title>HAL is initializing...</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/hal.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/hal.css" rel="stylesheet">
 </head>
 
 <body>
